lib/mpv_bindings.dart


  late final _mpv_get_sub_apiPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<mpv_handle>, ffi.Int32)>>('mpv_get_sub_api');
  late final _mpv_get_sub_api = _mpv_get_sub_apiPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<mpv_handle>, int)>();

  /// Initialize the renderer state. Depending on the backend used, this will
  /// access the underlying GPU API and initialize its own objects.
  ///
  /// You must free the context with mpv_render_context_free(). Not doing so before
  /// the mpv core is destroyed may result in memory leaks or crashes.
  ///
  /// Currently, only at most 1 context can exists per mpv core (it represents the
  /// main video output).
  ///
  /// You should pass the following parameters:
  /// - MPV_RENDER_PARAM_API_TYPE to select the underlying backend/GPU API.
  /// - Backend-specific init parameter, like MPV_RENDER_PARAM_OPENGL_INIT_PARAMS.
  /// - Setting MPV_RENDER_PARAM_ADVANCED_CONTROL and following its rules is
  /// strongly recommended.
  /// - If you want to use hwdec, possibly hwdec interop resources.
  ///
  /// @param res set to the context (on success) or NULL (on failure). The value
  /// is never read and always overwritten.
  /// @param mpv handle used to get the core (the mpv_render_context won't depend
  /// on this specific handle, only the core referenced by it)
  /// @param params an array of parameters, terminated by type==0. It's left
  /// unspecified what happens with unknown parameters. At least
  /// MPV_RENDER_PARAM_API_TYPE is required, and most backends will
  /// require another backend-specific parameter.
  /// @return error code, including but not limited to:
  /// MPV_ERROR_UNSUPPORTED: the OpenGL version is not supported
  /// (or required extensions are missing)
  /// MPV_ERROR_NOT_IMPLEMENTED: an unknown API type was provided, or
  /// support for the requested API was not
  /// built in the used libmpv binary.
  /// MPV_ERROR_INVALID_PARAMETER: at least one of the provided parameters was
  /// not valid.
  int mpv_render_context_create(
    ffi.Pointer<ffi.Pointer<mpv_render_context>> res,
    ffi.Pointer<mpv_handle> mpv,
    ffi.Pointer<mpv_render_param> params,
  ) {
    return _mpv_render_context_create(
      res,
      mpv,
      params,
    );
  }

  late final _mpv_render_context_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Pointer<mpv_render_context>>,
              ffi.Pointer<mpv_handle>,
              ffi.Pointer<mpv_render_param>)>>('mpv_render_context_create');
  late final _mpv_render_context_create =
      _mpv_render_context_createPtr.asFunction<
          int Function(ffi.Pointer<ffi.Pointer<mpv_render_context>>,
              ffi.Pointer<mpv_handle>, ffi.Pointer<mpv_render_param>)>();

  /// Attempt to change a single parameter. Not all backends and parameter types
  /// support all kinds of changes.
  ///
  /// @param ctx a valid render context
  /// @param param the parameter type and data that should be set
  /// @return error code. If a parameter could actually be changed, this returns
  /// success, otherwise an error code depending on the parameter type
  /// and situation.
  int mpv_render_context_set_parameter(
    ffi.Pointer<mpv_render_context> ctx,
    mpv_render_param param,
  ) {
    return _mpv_render_context_set_parameter(
      ctx,
      param,
    );
  }

  late final _mpv_render_context_set_parameterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_render_context>,
              mpv_render_param)>>('mpv_render_context_set_parameter');
  late final _mpv_render_context_set_parameter =
      _mpv_render_context_set_parameterPtr.asFunction<
          int Function(ffi.Pointer<mpv_render_context>, mpv_render_param)>();

  /// Retrieve information from the render context. This is NOT a counterpart to
  /// mpv_render_context_set_parameter(), because you generally can't read
  /// parameters set with it, and this function is not meant for this purpose.
  /// Instead, this is for communicating information from the renderer back to the
  /// user. See mpv_render_param_type; entries which support this function
  /// explicitly mention it, and for other entries you can assume it will fail.
  ///
  /// You pass param with param.type set and param.data pointing to a variable
  /// of the required data type. The function will then overwrite that variable
  /// with the returned value (at least on success).
  ///
  /// @param ctx a valid render context
  /// @param param the parameter type and data that should be retrieved
  /// @return error code. If a parameter could actually be retrieved, this returns
  /// success, otherwise an error code depending on the parameter type
  /// and situation. MPV_ERROR_NOT_IMPLEMENTED is used for unknown
  /// param.type, or if retrieving it is not supported.
  int mpv_render_context_get_info(
    ffi.Pointer<mpv_render_context> ctx,
    mpv_render_param param,
  ) {
    return _mpv_render_context_get_info(
      ctx,
      param,
    );
  }

  late final _mpv_render_context_get_infoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_render_context>,
              mpv_render_param)>>('mpv_render_context_get_info');
  late final _mpv_render_context_get_info =
      _mpv_render_context_get_infoPtr.asFunction<
          int Function(ffi.Pointer<mpv_render_context>, mpv_render_param)>();

  /// Set the callback that notifies you when a new video frame is available, or
  /// if the video display configuration somehow changed and requires a redraw.
  /// Similar to mpv_set_wakeup_callback(), you must not call any mpv API from
  /// the callback, and all the other listed restrictions apply (such as not
  /// exiting the callback by throwing exceptions).
  ///
  /// This can be called from any thread, except from an update callback. In case
  /// of the OpenGL backend, no OpenGL state or API is accessed.
  ///
  /// Calling this will raise an update callback immediately.
  ///
  /// @param callback callback(callback_ctx) is called if the frame should be
  /// redrawn
  /// @param callback_ctx opaque argument to the callback
  void mpv_render_context_set_update_callback(
    ffi.Pointer<mpv_render_context> ctx,
    mpv_render_update_fn callback,
    ffi.Pointer<ffi.Void> callback_ctx,
  ) {
    return _mpv_render_context_set_update_callback(
      ctx,
      callback,
      callback_ctx,
    );
  }

  late final _mpv_render_context_set_update_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<mpv_render_context>,
                  mpv_render_update_fn, ffi.Pointer<ffi.Void>)>>(
      'mpv_render_context_set_update_callback');
  late final _mpv_render_context_set_update_callback =
      _mpv_render_context_set_update_callbackPtr.asFunction<
          void Function(ffi.Pointer<mpv_render_context>, mpv_render_update_fn,
              ffi.Pointer<ffi.Void>)>();

  /// The API user is supposed to call this when the update callback was invoked
  /// (like all mpv_render_* functions, this has to happen on the render thread,
  /// and _not_ from the update callback itself).
  ///
  /// This is optional if MPV_RENDER_PARAM_ADVANCED_CONTROL was not set (default).
  /// Otherwise, it's a hard requirement that this is called after each update
  /// callback. If multiple update callback happened, and the function could not
  /// be called sooner, it's OK to call it once after the last callback.
  ///
  /// If an update callback happens during or after this function, the function
  /// must be called again at the soonest possible time.
  ///
  /// If MPV_RENDER_PARAM_ADVANCED_CONTROL was set, this will do additional work
  /// such as allocating textures for the video decoder.
  ///
  /// @return a bitset of mpv_render_update_flag values (i.e. multiple flags are
  /// combined with bitwise or). Typically, this will tell the API user
  /// what should happen next. E.g. if the MPV_RENDER_UPDATE_FRAME flag is
  /// set, mpv_render_context_render() should be called. If flags unknown
  /// to the API user are set, or if the return value is 0, nothing needs
  /// to be done.
  int mpv_render_context_update(
    ffi.Pointer<mpv_render_context> ctx,
  ) {
    return _mpv_render_context_update(
      ctx,
    );
  }

  late final _mpv_render_context_updatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<mpv_render_context>)>>('mpv_render_context_update');
  late final _mpv_render_context_update = _mpv_render_context_updatePtr
      .asFunction<int Function(ffi.Pointer<mpv_render_context>)>();

  /// Render video.
  ///
  /// Typically renders the video to a target surface provided via mpv_render_param
  /// (the details depend on the backend in use). Options like "panscan" are
  /// applied to determine which part of the video should be visible and how the
  /// video should be scaled. You can change these options at runtime by using the
  /// mpv property API.
  ///
  /// The renderer will reconfigure itself every time the target surface
  /// configuration (such as size) is changed.
  ///
  /// This function implicitly pulls a video frame from the internal queue and
  /// renders it. If no new frame is available, the previous frame is redrawn.
  /// The update callback set with mpv_render_context_set_update_callback()
  /// notifies you when a new frame was added. The details potentially depend on
  /// the backends and the provided parameters.
  ///
  /// Generally, libmpv will invoke your update callback some time before the video
  /// frame should be shown, and then lets this function block until the supposed
  /// display time. This will limit your rendering to video FPS. You can prevent
  /// this by setting the "video-timing-offset" global option to 0. (This applies
  /// only to "audio" video sync mode.)
  ///
  /// You should pass the following parameters:
  /// - Backend-specific target object, such as MPV_RENDER_PARAM_OPENGL_FBO.
  /// - Possibly transformations, such as MPV_RENDER_PARAM_FLIP_Y.
  ///
  /// @param ctx a valid render context
  /// @param params an array of parameters, terminated by type==0. Which parameters
  /// are required depends on the backend. It's left unspecified what
  /// happens with unknown parameters.
  /// @return error code
  int mpv_render_context_render(
    ffi.Pointer<mpv_render_context> ctx,
    ffi.Pointer<mpv_render_param> params,
  ) {
    return _mpv_render_context_render(
      ctx,
      params,
    );
  }

  late final _mpv_render_context_renderPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_render_context>,
              ffi.Pointer<mpv_render_param>)>>('mpv_render_context_render');
  late final _mpv_render_context_render =
      _mpv_render_context_renderPtr.asFunction<
          int Function(ffi.Pointer<mpv_render_context>,
              ffi.Pointer<mpv_render_param>)>();

  /// Tell the renderer that a frame was flipped at the given time. This is
  /// optional, but can help the player to achieve better timing.
  ///
  /// Note that calling this at least once informs libmpv that you will use this
  /// function. If you use it inconsistently, expect bad video playback.
  ///
  /// If this is called while no video is initialized, it is ignored.
  ///
  /// @param ctx a valid render context
  void mpv_render_context_report_swap(
    ffi.Pointer<mpv_render_context> ctx,
  ) {
    return _mpv_render_context_report_swap(
      ctx,
    );
  }

  late final _mpv_render_context_report_swapPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<mpv_render_context>)>>(
      'mpv_render_context_report_swap');
  late final _mpv_render_context_report_swap =
      _mpv_render_context_report_swapPtr
          .asFunction<void Function(ffi.Pointer<mpv_render_context>)>();
